Bug #12003 assertion failure in testsuite (double lock of LOCK_thread_count)
Submitted: 18 Jul 2005 14:12 Modified: 18 Jul 2005 15:14
Reporter: Guilhem Bichot
Status: Closed
Category:Server Severity:S1 (Critical)
Version:4.1 OS:Linux (linux)
Assigned to: Guilhem Bichot Target Version:

[18 Jul 2005 14:12] Guilhem Bichot
Description:
running the testsuite:
rpl000017                      [ pass ]
master not cooperating with mysqladmin, will try manual kill
./mysql-test-run: line 1423: kill: (16074) - No such process
master refused to die. Sending SIGKILL
./mysql-test-run: line 1427: kill: (16074) - No such process
rpl000018                      [ skipped ]
rpl_EE_error                   [ pass ]
rpl_alter                      [ pass ]
rpl_chain_temp_table           [ skipped ]
rpl_change_master              [ pass ]
rpl_charset                    [ pass ]
rpl_commit_after_flush         [ pass ]
master not cooperating with mysqladmin, will try manual kill
./mysql-test-run: line 1423: kill: (32102) - No such process
master refused to die. Sending SIGKILL
./mysql-test-run: line 1427: kill: (32102) - No such process
rpl_create_database            [ pass ]
master not cooperating with mysqladmin, will try manual kill
./mysql-test-run: line 1423: kill: (9828) - No such process
master refused to die. Sending SIGKILL
./mysql-test-run: line 1427: kill: (9828) - No such process
rpl_ddl                        [ pass ]
Because master crashes:
safe_mutex: Trying to lock mutex at mysqld.cc, line 1451, when the mutex was already
locked at mysqld.cc, line 653 in thread
 T@5467056
mysqld got signal 6;

How to repeat:
run testsuite of latest 4.1

Suggested fix:
fixing it now. Writing to dev who wrote the crashing change.